[package]
name = "minimal-windows-gui"
version = "0.1.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
edition = "2018"

[target.'cfg(windows)'.dependencies]
once_cell = "1.4.1"
widestring = "0.4.2"
winapi = { version = "0.3", features = ["commctrl", "commdlg", "libloaderapi", "winuser"] }

[workspace]
members = [
    "examples/menu_one",
    "examples/dlg_one",
    "examples/dlg_two",
    "examples/dlg_three",
    "examples/ctl_one",
    "examples/bmp_one",
]

[patch.crates-io]
mui = { path = ".", package = "minimal-windows-gui" }
